--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
   "private": true,
   "scripts": {
     "s": "webpack",
-    "w": "webpack-dev-server"
+    "w": "webpack-dev-server",
+    "lint": "eslint --fix src/**"
   },
   "dependencies": {
     "@babel/core": "^7.5.5",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.4.4",
     "@babel/plugin-transform-react-jsx": "^7.3.0",
     "babel-loader": "^8.0.6",
+    "eslint": "^6.0.1",
+    "eslint-plugin-react": "^7.14.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
