--- a/package.json
+++ b/package.json
@@ -16,12 +16,17 @@
     "@babel/core": "^7.5.5",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.4.4",
     "@babel/plugin-transform-react-jsx": "^7.3.0",
+    "autoprefixer": "^9.6.1",
     "babel-loader": "^8.0.6",
+    "css-loader": "^3.1.0",
     "eslint": "^6.0.1",
     "eslint-plugin-react": "^7.14.2",
+    "postcss-loader": "^3.0.0",
+    "postcss-nested": "^4.1.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
+    "style-loader": "^0.23.1",
     "webpack": "^4.36.1",
     "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.7.2"
