use react-intl for everything; cleaned up directories + unused packages

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-i18next": "^10.12.5",
+    "react-intl": "^3.3.0",
     "react-router-dom": "^5.0.1",
     "standard": "^14.1.0",
     "style-loader": "^0.23.1",
